# NOCS

./: .gitignore  Installation  LICENSE  README.md  compile_pinocchio_tests.sh  install_nocs.sh
documentation/Results/: FiniteDifferencesComparison.md  openHRC_pinocchio.md
documentation/a_brief_introduction_to_NOCS/: biblio.bib  main.tex
rbdl/cmake/linux-64/: rbdl-config.cmake
rbdl/lib/linux-64/addons/urdfreader/: rbdl_urdfreader_util
solver/: CMakeLists.txt  nocsConfig.h.in
solver/data/openHRC_models/: NAOTemplate.xml  NAOTemplate_com.xml  NAOURDF_SixDoF.xml  nao_inertial _pasivemode.ttt  nao_inertial.ttt  nao_inertial_nondyna.ttt  nao_spec
solver/data/pinocchio_models/: abb_yumi.urdf  humanoid.urdf  kukaYoubot.urdf  nao_inertial_XYZ_python.urdf
solver/example/localCollocation/: CMakeLists.txt
solver/example/localCollocation/geoMBD_examples/: CMakeLists.txt
solver/example/localCollocation/geoMBD_examples/NAO/: CMakeLists.txt  functions.cxx  main.cxx
solver/example/localCollocation/geoMBD_examples/geoMBD_test/: CMakeLists.txt  functions.cxx  main.cxx
solver/example/localCollocation/nocs_examples/: CMakeLists.txt
solver/example/localCollocation/nocs_examples/FiniteDiffTest/: block_test  functions.cxx  main.cxx
solver/example/localCollocation/nocs_examples/RRPlanarRobot/: CMakeLists.txt  functions.cpp  functions.cxx  main.cpp  main.cxx
solver/example/localCollocation/nocs_examples/RRPlanarRobot_circle_manipulation/: CMakeLists.txt  animate_planar.py  functions.cxx  main.cxx  problem_description.md
solver/example/localCollocation/nocs_examples/RRPlanarRobot_obstacle/: functions.cxx
solver/example/localCollocation/nocs_examples/obstacleAvoidance/: CMakeLists.txt  functions.cpp  functions.cxx  main.cpp  main.cxx
solver/example/localCollocation/nocs_examples/test_Luis/: CMakeLists.txt  main.cxx
solver/example/localCollocation/openHRC_examples/NAO/: functions.cxx  main.cxx
solver/example/localCollocation/openHRC_examples/kukaYoubot/: functions.cxx  main.cxx
solver/example/localCollocation/pinocchio_examples/: CMakeLists.txt  casadi_test_pinocchio_snake_robot.py
solver/example/localCollocation/pinocchio_examples/NAO/: CMakeLists.txt  functions.cxx  main.cxx  results
solver/example/localCollocation/pinocchio_examples/NAO_COM/: CMakeLists.txt  functions.cxx  main.cxx
solver/example/localCollocation/pinocchio_examples/NAO_COM_TIME/: CMakeLists.txt  main(DerivativeBugTest).cxx  main.cxx
solver/example/localCollocation/pinocchio_examples/UR5/: CMakeLists.txt  functions.cxx  main.cxx
solver/example/localCollocation/pinocchio_examples/kukaYoubot/: CMakeLists.txt  functions.cxx  main.cxx
solver/example/localCollocation/pinocchio_examples/snake_robot/: CMakeLists.txt  functions.cxx  generateURDF.cxx  main.cxx
solver/example/localCollocation/pinocchio_examples/test/: CMakeLists.txt  dataStreaming.cxx  main.cxx
solver/example/localCollocation/pinocchio_examples/time_comparisons/: main.cxx
solver/example/localCollocation/pinocchio_examples/yummy_robot/: CMakeLists.txt  functions.cxx  main.cxx
solver/example/localCollocation/rbdl_examples/: CMakeLists.txt
solver/example/localCollocation/rbdl_examples/NAO/: CMakeLists.txt  functions.cxx  main.cxx
solver/example/localCollocation/rbdl_examples/test/: CMakeLists.txt  functions.cxx  main.cxx
solver/include/: core.hpp
solver/include/core/: problem.hpp
solver/include/derivatives/: numerical.hpp
solver/include/directCollocation/local/: blockOperations.hpp  blockPropagation.hpp  derivatives.hpp  dynamicsHandlers.hpp  fcnGenerator.hpp  local.hpp  nocsLocal.hpp  structures.hpp  userFunctions.hpp  utils.hpp
solver/include/nlpSolver/: IPOPT_Interface.hpp
solver/src/derivatives/: numerical.cxx
solver/src/directCollocation/local/: blockOperations.cxx  blockPropagation.cxx  cnsFunction.cxx  costFcn.cxx  derivatives.cxx  dynamicsHandlers.cxx  interpolation.cxx  local.cxx  mesh.cxx  nocsLocal.cxx  sparsity.cxx  sparsity.cxx.autosave  transcription.cxx  utils.cxx
solver/src/nlpSolver/: ipoptInterface.cxx
